--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,6 @@
 {
   "tooltip": "Use IntelliSense to learn about possible attributes. Hover to view descriptions of existing attributes. For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387",
-  "version": "1",
+  "version": "2",
   "configurations": [
     {
       "type": "node",
@@ -11,7 +11,8 @@
         "bot_username": "",
         "channel_name": "",
         "oauth_token": "",
-        "prefix": ""
+        "prefix": "",
+        "exp": ""
       }
     }
   ]
