--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "prontbot, L375's twitch bot",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/collection": "^0.2.1",
     "tmi.js": "^1.8.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
