--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prontbot",
-  "version": "0.2.0-indev",
+  "version": "0.2.0",
   "description": "prontbot, L375's twitch bot",
   "homepage": "https://l375.weebly.com/prontbot",
   "repository": {
@@ -10,6 +10,8 @@
   "main": "index.js",
   "dependencies": {
     "@discordjs/collection": "^0.2.1",
+    "bent": "^7.3.12",
+    "colors": "^1.4.0",
     "tmi.js": "^1.8.3"
   },
   "scripts": {
