--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,9 @@ typings/
 # FuseBox cache
 .fusebox/
 
-#DynamoDB Local files 
+# DynamoDB Local files 
 .dynamodb/
 
-# Code workspace files
+# VSCode files
 *.code-workspace
+.vscode/*
